--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,4 +56,12 @@
   body {
     @apply bg-background text-foreground;
   }
+  @keyframes blink {
+    50% {
+      opacity: 0;
+    }
+  }
+  .blinking-cursor {
+    animation: blink 1s step-end infinite;
+  }
 }
