--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,24 +27,24 @@
   }
  
   .dark {
-    --background: 0 0% 10%;
+    --background: 270 11% 11%;
     --foreground: 330 25% 97%;
-    --card: 0 0% 10%;
+    --card: 267 13% 15%;
     --card-foreground: 330 25% 97%;
-    --popover: 0 0% 10%;
+    --popover: 267 13% 15%;
     --popover-foreground: 330 25% 97%;
     --primary: 349 37% 75%;
-    --primary-foreground: 0 0% 10%;
-    --secondary: 0 0% 15%;
+    --primary-foreground: 270 11% 11%;
+    --secondary: 268 17% 17%;
     --secondary-foreground: 330 25% 97%;
-    --muted: 0 0% 15%;
+    --muted: 268 17% 17%;
     --muted-foreground: 0 0% 64%;
-    --accent: 0 0% 15%;
+    --accent: 267 13% 15%;
     --accent-foreground: 330 25% 97%;
     --destructive: 0 63% 31%;
     --destructive-foreground: 0 0% 98%;
-    --border: 349 37% 30%;
-    --input: 349 37% 30%;
+    --border: 268 17% 22%;
+    --input: 268 17% 22%;
     --ring: 349 37% 75%;
   }
 }
@@ -63,5 +63,8 @@
   }
   .blinking-cursor {
     animation: blink 1s step-end infinite;
+  }
+  .dark .blinking-cursor {
+    text-shadow: 0 0 5px hsl(var(--primary) / 0.7);
   }
 }
